# udisks2-qt5

./: CMakeLists.txt  README.md  README.zh_CN.md
src/: CMakeLists.txt  udisks2-qt5.pc.in
src/modules/: CMakeLists.txt  udisks2qt5-config.cmake.in
